bk_ida/gccida/g3/find_regno_note
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_regno_note/src/rtlanal.c:2266:33: error: must use 'enum' tag to refer to type 'reg_note'
rtx  find_regno_note( rtx insn, reg_note kind, unsigned int regno) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_regno_note/src/rtlanal.c:2284:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)insn[3].fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_regno_note/src/rtlanal.c:2310:40: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v16) - 5) < 2) + 1 + ( unsigned int)v14 > regno ) 
                                       ^~~~~~~~~~~~
                                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_regno_note/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_regno_note/src/rtlanal.c:2352:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v10) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_regno_note/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_regno_note/src/obj/rtlanal.o] Error 1
